winter-test/src/test/mods/io.winterframework.test.error.moduleG/io/winterframework/test/error/moduleG/sub/BeanC.java
package io.winterframework.test.error.moduleG.sub;

import io.winterframework.core.annotation.Bean;

@Bean
public class BeanC {
	
	public BeanC() {
	}
	
}
